--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
             <link rel='stylesheet' href='assets/css/style.css'>
             <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
             <script type='text/javascript' src='knockout-3.4.0.js'></script>
+            <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+
     </head>
     <body>
         
@@ -14,18 +16,17 @@
         <center>
             <div class='ctrlbx inputctrl'>
                 <form>
-                First name: <input data-bind='value: firstName' /> 
-                Last name: <input data-bind='value: lastName' /> 
+                <span class='iplabel'>First name</span><br> <input class='mdinput' data-bind='value: firstName' /> <br><br>
+                <span class='iplabel'>Last name</span><br><input class='mdinput' data-bind='value: lastName' /> 
                 </form>
             </div>
-            <div class='ctrlbx toolsctrl'>
-                
+            <div class='ctrlbx toolsctrl'>  
             </div>
+    </div>
+        <div class='midbot'>  
+            <h2><span data-bind='text: fullName'> </span></h2>
+        </div>
         </center>
-    </div>
-    <div class='midbot'>  
-        <h2>Hello, <span data-bind='text: fullName'> </span>!</h2>
-    </div>
         <script type='text/javascript' src='script1.js'></script>
     </body>
 </html>
