--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 <span class='iplabel'>First name</span><br> <input class='mdinput' data-bind='value: firstName' /> <br><br>
                 <span class='iplabel'>Last name</span><br><input class='mdinput' data-bind='value: lastName' /> 
                 </form>
+
             </div>
-            <div class='ctrlbx toolsctrl'>  
-            </div>
+            <!-- <div class='ctrlbx toolsctrl'>  </div> -->
+            
     </div>
         <div class='midbot'>  
             <h2><span data-bind='text: fullName'> </span></h2>
